@@ -1,3 +1,11 @@
+2011-06-18  Colomban Wendling  <colomban(at)geany(dot)org>
+
+ * src/document.c, src/document.h, src/editor.c:
+   Remove support of size being -1 in document_open_file_list().
+ * src/utils.c src/utils.h:
+   Remove support of size being -1 in utils_get_line_endings().
+
+
 2011-06-16  Colomban Wendling  <colomban(at)geany(dot)org>
 
  * src/document.c, src/main.c, src/ui_utils.c, src/utils.c:
